2-23-09: #1286, indicated where parsing of statistics message results should be handled
2-23-09: #1285, sending statistics message only returns true if debug output is enabled
2-23-09: #1248, field user_installation_timestamp is missing from Java session message
2-23-09: #1254, session counts should not be incremented if Software Agreement is declined
2-21-09: make ErrorDialog handle html formatting & styling so that clients can pass in any string
2-21-09: provide default title for ErrorDialog, since all current uses are "Error"
2-21-09: #1276, create PlainMessageDialog for replacing JOptionPanes that don't repaint
2-21-09: #1276, fix a bunch of dialogs by subclassing PaintImmediateDialog
2-19-09: #1236, -Ddeployment.scenario=ABC to force the deployment scenario to value ABC
2-19-09: #1236, add abstraction of phet installer version (PhetInstallerVersion)
2-19-09: #1236, get/set/test ask-me-later durations for sim and installer updates
2-19-09: #1236, "no update available" dialog hierarchy for sims and installer
2-19-09: #1236, rename PhetInfoQuery to VersionInfoQuery since (for now) it only deals with version info
2-19-09: #1236, replace notifiers with PhetInfoQuery
2-18-09: #1256, make the statistics details dialog resizable
2-18-09: #1255, make software agreement dialog resizeable
2-18-09: move all phetcommon URLs to PhetCommonConstants
2-18-09: delete IStatistics, pass SessionMessage instance instead of odd reference to PhetApplicationConfig
2-18-09: #1238, add dialog for recommending PhET installer update (not wired up)
2-18-09: #1238, add "Check for PhET installer update" button to Update preferences panel
2-18-09: #1236, rename many update dialog classes to indicate that they pertain to "sims" versus "installer"
2-17-09: #1257, fix help menu, wrong critieria for deciding whether to add "Check for updates" menu item
2-17-09: replace "jar-launcher.properties" with constant throughout 