@@ -1,3 +1,5 @@
+2-23-09: #1237, first attempt at using phet-info.php, I don't understand the error returned
+2-23-09: XMLUtils, used by both phet_info.php and submit_message.php
 2-23-09: #1286, indicated where parsing of statistics message results should be handled
 2-23-09: #1285, sending statistics message only returns true if debug output is enabled
 2-23-09: #1248, field user_installation_timestamp is missing from Java session message
